--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
-    "subscriptions-transport-ws": "^0.9.18"
+    "subscriptions-transport-ws": "^0.9.18",
+    "lodash": "4.17.19"
   },
   "scripts": {
     "start": "react-scripts start",
