--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "@testing-library/user-event": "^12.8.3",
     "apollo-server-express": "^3.1.2",
     "axios": "^0.21.1",
-    "optimism": "^0.13.0",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
+    "lodash": "4.17.19",
+    "optimism": "^0.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-resize-observer": "^1.1.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
     "subscriptions-transport-ws": "^0.9.18",
-    "lodash": "4.17.19"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
