--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "apollo-server-express": "^3.1.2",
     "axios": "^0.21.1",
+    "bootstrap-icons": "^1.5.0",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
     "lodash": "4.17.19",
