--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "hackernews-node",
+  "name": "giphy-project",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "build": "babel src -d dist",
     "start": "npm run build && node dist",
     "restart": "rimraf dist && npm run start",
-    "dev": "nodemon --exec npm run restart"
+    "dev": "npm run start"
   },
   "dependencies": {
+    "apollo-datasource-rest": "^3.1.1",
     "apollo-server-express": "2.14.2",
     "axios": "^0.21.1",
     "graphql": "14.2.1",
